# ML-AlgorithmsKit

./: .gitignore  LICENSE  README.md  conda_env.yml  pyproject.toml  requirements.txt  setup.py
K-Means-Clustering/: K-Means.py
Linear_Regression/: Linear_Regression.py
Logistic_Regression/: Logistic_Regression.py
ml-algorithmskit/Decision_Tree/: Decision_Tree.py
ml-algorithmskit/KNN/: __init__.py
ml-algorithmskit/Linear_Regression/: __init__.py
ml-algorithmskit/Logistic_Regression/: Logistic_Regression.py
ml-algorithmskit/Neural_Network/: Neural_Network.py  __init__.py
notebooks/: ML-AlgorithmsKit.ipynb
src/MLAlgorithmsKit/: __init__.py
src/MLAlgorithmsKit/Decision_Tree/: __init__.py
src/MLAlgorithmsKit/KNN/: KNN.py
src/MLAlgorithmsKit/K_Means_Clustering/: __init__.py
src/MLAlgorithmsKit/Logistic_Regression/: __init__.py
src/MLAlgorithmsKit/Neural_Network/: Neural_Network.py
